--- a/index.css
+++ b/index.css
@@ -19,6 +19,8 @@ h1{
   transform: rotate(30deg)
 }
 
+/* google fonts */
+
 @import url(https://fonts.googleapis.com/css?family=Lato:400,700);
 * {
   -moz-box-sizing: border-box;
@@ -36,6 +38,8 @@ h1 {
   text-align: center;
 }
 
+/* faq styles */
+/* list head */
 .accordion dt > a {
   text-align: center;
   font-weight: 700;
@@ -45,16 +49,24 @@ h1 {
   color: #868383;
   -webkit-transition: background-color 0.5s ease-in-out;
 }
+/* faq list child */
 .accordion dd {
   background-color: #1abc9c;
   color:#191818;
   font-size: 1em;
   line-height: 1.5em;
 }
+
+/* scroll style list child */
 .accordion dd > p {
   padding: 1em 2em 1em 2em;
+  height: 7em;
+  overflow-y: scroll;
+  line-height: 1.5em;
+  font-family: 'Times New Roman', Times, serif;
 }
 
+/* accordion panel */
 .accordion {
   position: relative;
   background-color: #16a085;
@@ -70,6 +82,8 @@ h1 {
   background-color: #22313F;
   border-bottom: 1px solid #2c3e50;
 }
+
+/* box opening transitions */
 .accordionTitle:before {
   content: "+";
   font-size: 1.5em;
@@ -80,6 +94,8 @@ h1 {
   -webkit-transition: -webkit-transform 0.3s ease-in-out;
   transition: transform 0.3s ease-in-out;
 }
+
+/* after open the accordion */
 .accordionTitle:hover {
   background-color: #2c3e50;
 }
@@ -93,10 +109,13 @@ h1 {
   transform: rotate(-225deg);
 }
 
+/* toggle */
 .accordionItem {
   height: auto;
   overflow: hidden;
 }
+/* responsive for */
+/* global screen */
 @media all {
   .accordionItem {
     max-height: 50em;
@@ -106,6 +125,8 @@ h1 {
     transition: max-height 1s;
   }
 }
+
+/* lower screen */
 @media screen and (min-width: 48em) {
   .accordionItem {
     max-height: 15em;
@@ -120,6 +141,8 @@ h1 {
   max-height: 0;
 }
 
+
+/* animation   style */
 .animateIn {
   -webkit-animation-name: accordionIn;
   -webkit-animation-duration: 0.65s;
@@ -168,6 +191,7 @@ h1 {
   animation-delay: 0s;
 }
 
+/* keyframes  for supporting browsers */
 @-webkit-keyframes accordionIn {
   0% {
     opacity: 0;
